code organization and constants